--- a/simple-ecommerce/Resources/SharedResource.en.resx
+++ b/simple-ecommerce/Resources/SharedResource.en.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="TelephoneEnquiry" xml:space="preserve">
-    <value>Telephone Enquiry</value>
+  <data name="str_welcome_message" xml:space="preserve">
+    <value>Welcome in English</value>
   </data>
 </root>
